# CuckyVoxel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bin_client/Data/Shader/: Direct.shd  Generic.shd  GenericTexture.shd  GenericWorld.shd  Sky.shd
src/Client/: Main.cpp  Main.h  Texture.cpp  Texture.h  TextureData.cpp  TextureData.h
src/Client/Backend/: Backend.cpp  Backend.h  Core.h  Event.h  Render.h  ShaderFile.cpp  ShaderFile.h
src/Client/Backend/OpenGL/: Mesh.cpp  Mesh.h  Render.cpp  Render.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Client/Backend/SDL2/: Core.cpp  Core.h  Event.cpp  Event.h  Render.cpp  Render.h
src/Client/World/: ChunkMesh.cpp  ChunkMesh.h  Sky.cpp  Sky.h  World.cpp  World.h
src/Common/Noise/: Octaves_Perlin.cpp  Octaves_Perlin.h  Octaves_Simplex.cpp  Octaves_Simplex.h  Perlin.cpp  Perlin.h  Simplex.cpp  Simplex.h
src/Common/Util/: ColourSpace.cpp  ColourSpace.h  Error.cpp  Error.h  Random.cpp  Random.h
src/Common/World/: Chunk.cpp  Chunk.h  ChunkGenerate.cpp  ChunkGenerate.h  ChunkGenerator.cpp  ChunkGenerator.h  ChunkManager.cpp  ChunkManager.h  World.cpp  World.h  WorldDef.h  WorldPosition.cpp  WorldPosition.h
